--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
+    "nprogress": "^0.2.0",
+    "qs": "^6.5.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
   },
